@startuml
title Логічна схема реляційної моделі БД

entity "Користувач" {
  + id : INT <<PK>>
  * ім’я : VARCHAR
  * вік : INT
  * алергії : TEXT
  * ціль : VARCHAR
}

entity "ДаніПроЗдоров’я" {
  + id : INT <<PK>>
  * користувач_id : INT <<FK>>
  * вага : FLOAT
  * зріст : INT
  * індекс_маси_тіла : FLOAT
  * рівень_активності : VARCHAR
  * дієтичні_обмеження : TEXT
}

entity "ПланХарчування" {
  + id : INT <<PK>>
  * користувач_id : INT <<FK>>
  * сніданок : TEXT
  * обід : TEXT
  * вечеря : TEXT
  * калорійність : INT
}

entity "Рекомендації" {
  + id : INT <<PK>>
  * план_id : INT <<FK>>
  * обсяг_води_на_день : FLOAT
  * фізична_активність : VARCHAR
}

entity "Досягнення" {
  + id : INT <<PK>>
  * користувач_id : INT <<FK>>
  * кількість_тренувань : INT
  * виконані_вправи : TEXT
  * нагороди : TEXT
}

entity "Самоповага" {
  + id : INT <<PK>>
  * користувач_id : INT <<FK>>
  * рівень : FLOAT
  * впевненість : VARCHAR
}

entity "ТанцювальніПодії" {
  + id : INT <<PK>>
  * користувач_id : INT <<FK>>
  * назва : VARCHAR
  * тип_танцю : VARCHAR
  * дата_проведення : DATE
  * місце_проведення : VARCHAR
}

"Користувач" ||--|| "ДаніПроЗдоров’я" : має
"Користувач" ||--|| "ПланХарчування" : отримує
"Користувач" ||--o{ "Досягнення" : має
"Користувач" ||--|| "Самоповага" : отримує
"Користувач" ||--o{ "ТанцювальніПодії" : читає
"ПланХарчування" ||--o{ "Рекомендації" : містить

@enduml
